--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,9 @@ dependencies {
     implementation "com.google.android.material:material:$version_material"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    
+    def appCenterSdkVersion = '2.1.0'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 
 }
